Fix spacing for project card title

--- a/src/styles/components/_project-card.scss
+++ b/src/styles/components/_project-card.scss
@@ -74,6 +74,7 @@
       margin: 0;
       max-height: 50px;
       overflow: hidden;
+      padding-right: 20px;
       &::before {
         content: "";
         position: absolute;
